# Project3Group22

./: CMakeLists.txt  README.md  datasetsTest.py  food_data.csv
src/: Controller.cpp  Controller.h  MainMenu.cpp  MainMenu.h  ResourceManager.cpp  ResourceManager.h  State.cpp  State.h  UI.cpp  UI.h  knapsackSolution.h  main.cpp  parseData.h
